# local-crm

./: AGENTS.md  LICENSE  PROJECT_CONTEXT.md  README.es.md  README.md  ROADMAP_CURSO.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backups.rs  calendar.rs  clients.rs  dashboard.rs  database.rs  demo.rs  documents.rs  inventory.rs  lib.rs  main.rs  pdf_export.rs  quotes.rs  settings.rs  system.rs  tasks.rs
src/components/: ActionMenu.tsx  LoadErrorState.tsx  ModalDialog.tsx  UiIcon.tsx
src/features/calendar/: CalendarPage.tsx  calendar.api.ts  calendar.types.ts
src/features/clients/: ClientsPage.tsx  client.api.ts  client.types.ts
src/features/dashboard/: DashboardPage.tsx  dashboard.api.ts  dashboard.types.ts
src/features/documents/: DocumentsPage.tsx  document.api.ts  document.types.ts
src/features/inventory/: InventoryPage.tsx  inventory.api.ts  inventory.types.ts
src/features/onboarding/: FirstRunTour.tsx  onboarding.api.ts  onboarding.types.ts
src/features/quotes/: QuotesPage.tsx  quote.api.ts  quote.pdf.ts  quote.types.ts
src/features/settings/: SettingsPage.tsx  backup.api.ts  backup.types.ts  settings.api.ts  settings.types.ts  system.api.ts  system.types.ts
src/features/tasks/: TasksPage.tsx  task.api.ts  task.types.ts
